--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="header">
             <h1 id="poke-title">Pokedex</h1>
             <div id="search-wrap">
-                <input type="text" placeholder="Nome do Pokemon">
-                <button>Pesquisar</button>
+                <input id="search-input" type="text" placeholder="Nome do Pokemon">
+                <button onclick="searchPokemon()">Pesquisar</button>
             </div>
         </div>
 
