Botões de filtro funcionando :D

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <!--    <a href="pokemon.html"> teste</a> -->
 
         <div id="btn-list">
-            <button value="normal" >Normal</button>
-            <button value="grass">Grass</button>
-            <button value="fire">Fire</button>
-            <button value="water">Water</button>
-            <button value="ground">Ground</button>
+            <button value="1" >Normal</button>
+            <button value="12">Grass</button>
+            <button value="10">Fire</button>
+            <button value="11">Water</button>
+            <button value="5">Ground</button>
         </div>
 
         <hr>
