Botões funcionando daorinha

--- a/index.html
+++ b/index.html
@@ -34,11 +34,22 @@
         <!--    <a href="pokemon.html"> teste</a> -->
 
         <div id="btn-list">
-            <button value="1" >Normal</button>
-            <button value="12">Grass</button>
+            <button value="0" id="btn-all">All</button>
+            <button value="1">Normal</button>
+            <button value="2">Fighting</button>
+            <button value="3">Flying</button>
+            <button value="4">Poison</button>
+            <button value="5">Ground</button>
+            <button value="6">Rock</button>
+            <button value="7">Bug</button>
+            <button value="8">Ghost</button>
+            <button value="9">Steel</button>
             <button value="10">Fire</button>
             <button value="11">Water</button>
-            <button value="5">Ground</button>
+            <button value="12">Grass</button>
+            <button value="13">Eletric</button>
+            <button value="14">Psychic</button>
+            <button value="15">Ice</button>
         </div>
 
         <hr>
