--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pokedex</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
 
     <script
         src="https://code.jquery.com/jquery-3.6.1.js"
@@ -24,11 +25,9 @@
         <div class="header">
             <h1 id="poke-title">Pokedex</h1>
             <div id="search-wrap">
-                <input id="search-input" type="text" placeholder="Nome do Pokemon">
+                <input id="search-input" type="search" placeholder="Nome do Pokemon">
                 <button id="search-btn" onclick="searchPokemon()">Pesquisar</button>
             </div>
-
-            
         </div>
 
         <!--    <a href="pokemon.html"> teste</a> -->
@@ -36,20 +35,20 @@
         <div id="btn-list">
             <button value="0" id="btn-all">All</button>
             <button value="1">Normal</button>
-            <button value="2">Fighting</button>
-            <button value="3">Flying</button>
-            <button value="4">Poison</button>
-            <button value="5">Ground</button>
-            <button value="6">Rock</button>
-            <button value="7">Bug</button>
-            <button value="8">Ghost</button>
-            <button value="9">Steel</button>
             <button value="10">Fire</button>
             <button value="11">Water</button>
-            <button value="12">Grass</button>
             <button value="13">Eletric</button>
-            <button value="14">Psychic</button>
+            <button value="12">Grass</button>
             <button value="15">Ice</button>
+            <button value="2">Fighting</button>
+            <button value="4">Poison</button>
+            <button value="5">Ground</button>
+            <button value="3">Flying</button>
+            <button value="14">Psychic</button>
+            <button value="7">Bug</button>
+            <button value="6">Rock</button>
+            <button value="8">Ghost</button>
+            <button value="9">Steel</button>
         </div>
 
         <hr>
